--- a/src/client/components/Button/Button.module.scss
+++ b/src/client/components/Button/Button.module.scss
@@ -11,7 +11,6 @@
   background: #95B3FF;
 }
 .buttonText {
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
